# senbrua

./: .eslintrc.json  .gitignore  .gitmodules  .prettierignore  .prettierrc.json  APT_INSTALLATION_READY.md  APT_SETUP_GUIDE.md  AUTHORS  FLATHUB_SUBMISSION.md  INSTALLATION.md  INSTALLATION_METHODS.md  NEWS  README.md  RELEASE_STATUS.md  STORE_ASSETS.md  apt-repo-setup.sh  build.sh  build_appimage.sh  deploy.sh  io.github.senbrua.json  meson.build  meson_options.txt  package-lock.json  package.json  senbrua.doap  setup-apt-repo.sh  tsconfig.json  uz.mohirlab.senbrua.json
.github/ci-image/: Dockerfile
.github/workflows/: build-ghcr-image.yml  flatpak.yml  pages.yml  release.yml  snap.yml
apt-repo/dists/focal/: Release
apt-repo/dists/focal/main/binary-amd64/: Packages
apt-repo/pool/main/s/senbrua/: uz.mohirlab.senbrua_1.0.0-1_amd64.deb  uz.mohirlab.senbrua_1.0.1-1_amd64.deb
data/: io.github.senbrua.data.gresource.xml  io.github.senbrua.desktop.in.in  io.github.senbrua.gschema.xml.in  io.github.senbrua.metainfo.xml.in.in  meson.build  style.css  uz.mohirlab.senbrua.data.gresource.xml  uz.mohirlab.senbrua.gschema.xml.in  uz.mohirlab.senbrua.metainfo.xml.in.in
data/ui/: help-overlay.ui  recorder.ui  row.ui  window.ui
debian/: changelog  control  copyright  debhelper-build-stamp  files  rules
debian/uz.mohirlab.senbrua/DEBIAN/: control  md5sums
debian/uz.mohirlab.senbrua/usr/share/applications/: uz.mohirlab.senbrua.desktop
debian/uz.mohirlab.senbrua/usr/share/glib-2.0/schemas/: uz.mohirlab.senbrua.gschema.xml
debian/uz.mohirlab.senbrua/usr/share/locale/af/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/an/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/ar/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/as/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/be/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/bs/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/ca/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/ca@valencia/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/ckb/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/cs/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/da/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/de/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/el/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/en_GB/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/eo/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/es/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/eu/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/fa/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/fi/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/fr/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/fur/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/gl/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/he/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/hi/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/hr/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/hu/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/id/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/ie/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/is/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/it/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/ja/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/ka/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/kk/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/ko/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/lt/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/lv/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/mjw/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/ml/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/ms/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/nb/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/locale/ne/LC_MESSAGES/: senbrua.mo
debian/uz.mohirlab.senbrua/usr/share/metainfo/: uz.mohirlab.senbrua.metainfo.xml
debian/uz.mohirlab.senbrua/usr/share/uz.mohirlab.senbrua/: uz.mohirlab.senbrua
flatpak-release-repo/: summary  summary.idx
flatpak-release-repo/refs/heads/app/uz.mohirlab.senbrua/x86_64/: stable
flatpak-release-repo/refs/heads/appstream/: x86_64
flatpak-release-repo/refs/heads/appstream2/: x86_64
flatpak-release-repo/refs/heads/runtime/uz.mohirlab.senbrua.Locale/x86_64/: stable
flatpak-release-repo/summaries/: d002f9bb79af7f509360f0adf632ba45700c5a0d6112e205ea9bd0a768e596e3-39cca99b38e69bb23b1e9360d444943152de2b97dc789700a6345386fac94eba.delta
po/: LINGUAS  POTFILES.in  af.po  be.po  ca.po  ca@valencia.po  ckb.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  lt.po  lv.po  meson.build  mjw.po  ml.po  ms.po  nb.po  ne.po  (+20 more)
snap/: snapcraft.yaml
src/: application.ts  io.github.senbrua.in  io.github.senbrua.src.gresource.xml.in  main.ts  meson.build  recorder.ts  recorderWidget.ts  recording.ts  recordingList.ts  recordingListWidget.ts  row.ts  utils.ts  uz.mohirlab.senbrua.in  uz.mohirlab.senbrua.src.gresource.xml.in  waveform.ts  window.ts
tools/: dev-run.sh
tsc-out/: application.js  main.js  recorder.js  recorderWidget.js  recording.js  recordingList.js  recordingListWidget.js  row.js  utils.js  waveform.js  window.js
types/: ambient.d.ts
(+24 files in other folders)
